# secunet

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
agents/base/: Dockerfile  base_agent.py  cc_client.py  commander_client.py  entrypoint.sh  requirements.txt  web_client.py
agents/detect/: Dockerfile  agent.py  main.py  sigma_generator.py
agents/exploit/: Dockerfile  agent.py  main.py  module_selector.py  risk_assessor.py
agents/monitor/: Dockerfile  agent.py  anomaly_detector.py  main.py  tripwire_deployer.py
agents/recon/: Dockerfile  agent.py  cve_lookup.py  main.py
agents/remediate/: Dockerfile  main.py  (+2 more)
backend/: Dockerfile  auth.py  config.py  crypto_utils.py  database.py  database_mongo.py  main.py  models.py  models_mongo.py  pyproject.toml  rate_limiter.py  schemas.py
command-center/: Dockerfile  llm_client.py  main.py  pyproject.toml  requirements.txt
command-center/api/: agent_gateway.py  execution.py  hitl.py  scope_enforcer.py  websocket.py
command-center/comm_hub/: broadcaster.py  redis_bus.py  router.py
command-center/commander/: agent.py  cold_storage.py  context_engine.py  fix_store.py  mission_state.py  report_builder.py  rolling_window.py  summariser.py  summary_cache.py  vector_store.py  write_pipeline.py
dashboard/: auth.ts  next.config.ts  package-lock.json  package.json
shared/: event_types.py  message_schema.py  mitre_attck.json
(+46 files in other folders)
